name:                trojan
version:             0.0.0.0
synopsis:            A text blocker.
description:         A text blocker, using DansGuardian's wonderful phraselist.
homepage:            https://txtrjn.valkyrian.com/
license:             BSD3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          Peter Harpending <peter@valkyrian.com>
copyright:           Copyright © 2014 Valkyrian Industries
category:            Text
build-type:          Simple
extra-source-files:
    res/phraselist-ugly.json
cabal-version:       >=1.10

library
  -- exposed-modules:
  -- other-modules:       
  -- other-extensions:    
  build-depends:
    base >=4.7 && <4.8
  hs-source-dirs:      src/
  default-language:    Haskell2010