name:                trojan
version:             0.0.0.0
synopsis:            A text blocker.
description:         A text blocker, using DansGuardian's wonderful phaselist.
homepage:            https://txtrjn.valkyrian.com/
license:             BSD3
license-file:        LICENSE
author:              Peter Harpending
maintainer:          Peter Harpending <peter@valkyrian.com>
copyright:           Copyright © 2014 Valkyrian Industries
category:            Text
build-type:          Simple
data-files:
  res/phraselist-schema.json
  res/phraselists-ugly/chat.json
  res/phraselists-ugly/conspiracy.json
  res/phraselists-ugly/drug-advocacy.json
  res/phraselists-ugly/forums.json
  res/phraselists-ugly/gambling.json
  res/phraselists-ugly/games.json
  res/phraselists-ugly/gore.json
  res/phraselists-ugly/id-theft.json
  res/phraselists-ugly/illegal-drugs.json
  res/phraselists-ugly/intolerance.json
  res/phraselists-ugly/legal-drugs.json
  res/phraselists-ugly/malware.json
  res/phraselists-ugly/music.json
  res/phraselists-ugly/news.json
  res/phraselists-ugly/nudism.json
  res/phraselists-ugly/peer2peer.json
  res/phraselists-ugly/personals.json
  res/phraselists-ugly/pornography.json
  res/phraselists-ugly/proxies.json
  res/phraselists-ugly/secret-societies.json
  res/phraselists-ugly/self-labeling.json
  res/phraselists-ugly/sport.json
  res/phraselists-ugly/translation.json
  res/phraselists-ugly/upstream-filter.json
  res/phraselists-ugly/violence.json
  res/phraselists-ugly/warez-hacking.json
  res/phraselists-ugly/weapons.json
  res/phraselists-ugly/webmail.json
  
cabal-version:       >=1.10

library
  exposed-modules:
      Text.Trojan.Phrase
      Text.Trojan.Phraselist
  -- other-modules:       
  other-extensions:
      FlexibleInstances
    , OverloadedStrings
  build-depends:
      aeson
    , base >=4.7 && <4.8
    , bytestring
    , containers
    , text
  hs-source-dirs:      src/
  default-language:    Haskell2010

-- Test-Suite test-phrase
--   type: exitcode-stdio-1.0
--   main-is: test/phrase.hs
--   build-depends:
--       aeson
--     , base
--     , bytestring
--     , containers
--     , trojan